add conway and bbb note1

--- a/_posts/2017-11-07-BBB-note1.md
+++ b/_posts/2017-11-07-BBB-note1.md
@@ -11,23 +11,26 @@ meta: "Springfield"
 开始学习BBB，系统 window10，把 BBB 插入电脑后打开 192.168.7.2 会看到预计的网页效果，但是在使用 Iclude9 时会发现不能烧写程序进去，一堆 not found,cannot write,预计可能是自带的系统没有更新。
 
 ## 更新系统
+
 从BBB官网上下载，选择的是 Debain 的一个新的系统，下载网速奇慢无比。下载好后之后解压用官网推荐的把系统烧到 SD 卡里面。注意要在 Linux系统下把 /../uEnv.txt 最后一行注释#删掉。
 
 BBB 断电插入 SD 卡，按住靠近 SD 卡的按键按住不动，开电长按15s后开始跑马灯 0-1-2-3，3-2-1-0，表示正在烧系统。等待一会灯全熄灭了，启动BBB可以看到系统已经变成 Debain，程序也可正常烧写进板子了。 
 
- * 查看系统信息
+## 查看系统信息
 
- 	1、# uname －a   （Linux查看版本当前操作系统内核信息）
+更新系统后通过命令查看系统状态
 
- 	2、# cat /proc/version （Linux查看当前操作系统版本信息）
+1、# uname －a   （Linux查看版本当前操作系统内核信息）
 
- 	3、# cat /etc/issue  或cat /etc/redhat-release（Linux查看版本当前操作系统发行版信息）
+2、# cat /proc/version （Linux查看当前操作系统版本信息）
 
- 	4、# cat /proc/cpuinfo （Linux查看cpu相关信息，包括型号、主频、内核信息等）
+3、# cat /etc/issue  或cat /etc/redhat-release（Linux查看版本当前操作系统发行版信息）
 
- 	5、# getconf LONG_BIT  （Linux查看版本说明当前CPU运行在32bit模式下， 但不代表CPU不支持64bit）
+4、# cat /proc/cpuinfo （Linux查看cpu相关信息，包括型号、主频、内核信息等）
 
- 	6、# lsb_release -a
+5、# getconf LONG_BIT  （Linux查看版本说明当前CPU运行在32bit模式下， 但不代表CPU不支持64bit）
+
+6、# lsb_release -a
 
 
 
