add linux operation on BBB

--- a/_posts/2017-11-09-BBB-note2.md
+++ b/_posts/2017-11-09-BBB-note2.md
@@ -8,10 +8,57 @@ meta: "Springfield"
 ---
 
 # beagleboard black 笔记 <2>
-点亮板子上的灯，循环点亮，跑马灯效果。
+在 Windows10 和 Ubuntu14.04 下的 BBB 操作。在 Ubuntu14.04 下的网络共享。
 
-点亮外部的灯，IO口控制。
+## 系统
 
-基本的按键输入，简单状态机。
+### Win10
 
-## 点亮 LED
+#### start page
+在 win10 下面使用 USB 插入电脑，我们很容易的按照教程 192.168.7.2 就能进入开始页面，使用 Petty 进入命令行。
+
+#### win 网络共享
+按照教程在网络设置中打开网络共享就能使用，但是学校的锐捷实在是阻止进步的阶梯，许多锐捷和 Mxxx 类似的软件都不能开多网卡了。
+
+### Ubuntu14.04
+#### start page
+在 Ubuntu14.04 下面使用 USB 插入电脑，并不能如意的进入开始页面 192.168.6.2  。使用 ifconfig 查看下。。。
+
+#### Ubuntu 网络共享
+在 Ubuntu 下的锐捷仍然禁止使用多网卡【MMP】，但是通过安装 mentohust ，配置好后是可以的。具体方法网上很多。
+
+ubuntu 成功联网后参考
+[Beaglebone black 与ubuntu 通过usb网络共享](http://blog.csdn.net/pkuyjxu/article/details/44617511) 可以实现网络分享。
+
+	Step 1, Configuring BBB as follow shows:
+	route add default gw 192.168.7.1
+	vim /etc/resolv.conf  and add "nameserver 8.8.8.8" at the end.
+	Step 2, Configuring Ubuntu PC as following shows:
+	sudo su
+	#wlan0 is my internet facing interface, eth1 is the BeagleBone USB connection
+	iptables --table nat --append POSTROUTING --out-interface wlan0 -j MASQUERADE
+	iptables --append FORWARD --in-interface eth1 -j ACCEPT
+	echo 1 > /proc/sys/net/ipv4/ip_forward
+	Step 3,  Test the internet in BBB as bellow shows:
+	ping 8.8.8.8
+	ping www.baidu.com
+
+## 时钟同步
+[beaglebone black 时间调整](http://blog.csdn.net/hahachenchen789/article/details/52326688)
+
+	1.首先要设置时区，板子默认的时区文件在/etc/localtime文件中，将其删除：rm /etc/localtime
+	2.查看系统数据库中有哪些时区可供选择，命令：ls /usr/share/zoneinfo/Asia/
+	3.选择上海，将上海时区链接到localtime，
+	命令：ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+	4.同步时间：在debian下，命令为： ntpdate-debian
+
+if run 
+
+	ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+
+总是提示/etc/localtime文件已经存在
+
+用 ln -sf 覆盖掉。
+
+## useful resp
+[From book by Molloy](https://github.com/derekmolloy/exploringBB)
