fix netconnect way/add vnc

--- a/_posts/2017-11-09-BBB-note2.md
+++ b/_posts/2017-11-09-BBB-note2.md
@@ -22,7 +22,7 @@ meta: "Springfield"
 
 ### Ubuntu14.04
 #### start page
-在 Ubuntu14.04 下面使用 USB 插入电脑，并不能如意的进入开始页面 192.168.6.2  。使用 ifconfig 查看下。。。
+在 Ubuntu14.04 下面使用 USB 插入电脑，并不能如意的进入开始页面 192.168.6.2  。使用 **ifconfig**  查看下。。。
 
 #### Ubuntu 网络共享
 在 Ubuntu 下的锐捷仍然禁止使用多网卡【MMP】，但是通过安装 mentohust ，配置好后是可以的。具体方法网上很多。
@@ -35,13 +35,15 @@ ubuntu 成功联网后参考
 	vim /etc/resolv.conf  and add "nameserver 8.8.8.8" at the end.
 	Step 2, Configuring Ubuntu PC as following shows:
 	sudo su
-	#wlan0 is my internet facing interface, eth1 is the BeagleBone USB connection
-	iptables --table nat --append POSTROUTING --out-interface wlan0 -j MASQUERADE
-	iptables --append FORWARD --in-interface eth1 -j ACCEPT
+	#【wlan0】 is my internet facing interface, 【eth1】 is the BeagleBone USB connection
+	iptables --table nat --append POSTROUTING --out-interface 【wlan0】 -j MASQUERADE
+	iptables --append FORWARD --in-interface 【eth1】 -j ACCEPT
 	echo 1 > /proc/sys/net/ipv4/ip_forward
 	Step 3,  Test the internet in BBB as bellow shows:
 	ping 8.8.8.8
 	ping www.baidu.com
+
+使用该教程时，先在 Ubuntu 下 **ifconfig** 查看下当前使用电脑的是哪个网卡，按照自己使用的网卡修改命令。
 
 ## 时钟同步
 [beaglebone black 时间调整](http://blog.csdn.net/hahachenchen789/article/details/52326688)
@@ -59,6 +61,39 @@ if run
 总是提示/etc/localtime文件已经存在
 
 用 ln -sf 覆盖掉。
+	
+	ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+
+## 使用 VNC 显示器
+从成本和硬件上考虑，外接一个显示器显得十分不方便，需要购买的器材有点多了。这时可以考虑使用 VNC 显示器，方便的是在　beagleboard black　的　debian 系统和 PC 的 Ubuntu 上都自带了相关的软件。
+
+[通过ＶＮＣ远程接入BeagleBone Black桌面](http://blog.csdn.net/qq_30897583/article/details/71195001)
+
+### BBB 上打开 vncserver
+记住此时分配给的端口号
+
+![vncserver](/post_img/BBB-img/openvnc.png  "vncserver")
+
+### 在 Ubuntu 上配置Remmina远程客户端
+配置时保证端口号一致，ssh高级设置可以选择性打开。
+
+![vncPcset](/post_img/BBB-img/vncPcset.png  "vncPcset")
+
+配置完成后即可进入。
+
+## 安装　Xfce４（可选）
+[install Xfce on Beaglebone Black ](https://www.douban.com/group/topic/42903996/)
+
+	sudo apt-get update
+	sudo apt-get install xfce4
+	sudo apt-get install xfce-goodies 
+
+安装完成后重启，输入 startx or stearxfce4 启动，进入ＶＮＣ　即可看见界面。
+
+![tablexf](/post_img/BBB-img/tablexf.png  "tablexf")
 
 ## useful resp
 [From book by Molloy](https://github.com/derekmolloy/exploringBB)
+
+# 进入vnc桌面后有可能显示不全，选择全屏才可以看见所有界面
+不要在这一步浪费太多时间
