--- a/_posts/2017-11-14-BBB-note3.md
+++ b/_posts/2017-11-14-BBB-note3.md
@@ -17,4 +17,17 @@ meta: "Springfield"
 
 * 基本的按键输入，简单的 Python 状态机。
 
-通过这几个实验可以基本的了解一下 BBB 的 IO 口功能，但是这样并不能让我们完全了解到 BBB 的优势 以及与 类似基本的诸如 51 或是 STM32 不同之处。接下来才是真正跳入 BBB 的坑的过程吧。
+通过这几个实验可以基本的了解一下 BBB 的 IO 口功能，但是这样并不能让我们完全了解到 BBB 的优势 以及与 类似基本的诸如 51 或是 STM32 不同之处，例如目前始终不能使用的 PWM 波功能。那么接下来才是真正跳入 BBB 的坑的过程吧。
+
+
+## PROBLEMS
+
+tmux: need UTF-8 locale (LC_CTYPE) but have ANSI_X3.4-1968
+tmux: invalid LC_ALL, LC_CTYPE or LANG
+
+[xfce4 ](https://www.douban.com/group/topic/42903996/)
+sudo apt-get update
+
+sudo apt-get install xfce4
+
+sudo apt-get install xfce-goodies 
