add bbb p pwm p9_14 v1

--- a/_posts/2017-11-09-BBB-note2.md
+++ b/_posts/2017-11-09-BBB-note2.md
@@ -92,6 +92,15 @@ if run
 
 ![tablexf](/post_img/BBB-img/tablexf.png  "tablexf")
 
+
+## PROBLEMS COLLECTION
+有时不知道自己搞的哪里坏了，在 cloud9 里面无法烧写程序，而是不断弹出错误，例如：
+
+	tmux: need UTF-8 locale (LC_CTYPE) but have ANSI_X3.4-1968
+	tmux: invalid LC_ALL, LC_CTYPE or LANG
+
+应该是板子上的字符选择的错误，但是我没有找到什么好的方法，直接重装了系统。
+
 ## useful resp
 [From book by Molloy](https://github.com/derekmolloy/exploringBB)
 
