add bbb pwm tig

--- a/_posts/2017-11-14-BBB-note3.md
+++ b/_posts/2017-11-14-BBB-note3.md
@@ -9,7 +9,7 @@ meta: "Springfield"
 
 # beagleboard black 笔记 <3>
 
-## 几个基于例程的实验
+# 几个基于例程的实验
 
 * 点亮板子上的灯，循环点亮，跑马灯效果。
 
@@ -21,35 +21,35 @@ meta: "Springfield"
 
 
 ## 使用ＰＷＭ波功能
-### 参考
+## 参考
 [Beaglebone Black开启PWM功能](http://blog.sina.com.cn/s/blog_7880d3350102wz2b.html)
 
 [Beaglebone Black PWM on Ubuntu](https://www.teachmemicro.com/beaglebone-black-pwm-ubuntu-device-tree/)
 
 [beagleboard/bb.org-overlays](https://github.com/beagleboard/bb.org-overlays/)
 
-### 开始使用教程最多的 p9_14 pwm io 口
+## 开始使用教程最多的 p9_14 pwm io 口
 按照教程，发现在 /lib/firmware/　目录下面只有一个　am33xx_pwm.dtbo 的驱动文件，却没有其他的ＩＯ口驱动。
 【这里就很明显的体现出了这种跑系统的板子和ＳＴＭ３２ 的区别，之前一直以为他俩差不多，没有仔细研究过设备树，覆盖层之类的概念。】
 
- * 编写一个覆盖层
+### 编写一个覆盖层
  可以自己为ＩＯ口编写一个，但是为了尽快看到实验效果，我直接　git 了一个。
 
 	 git clone https://github.com/beagleboard/bb.org-overlays/tree/master/src/arm
 
- * 进入目录，编译，移动驱动。
+### 进入目录，编译，移动驱动。
 
 	dtc -O dtb -o BB-PWM1-00A0.dtbo -b 0 -@ BB-PWM1-00A0.dts
 
 	mv -i BB-PWM1-00A0.dtbo /lib/firmware
 
- * 添加到 slots 里面去。
+### 添加到 slots 里面去。
 
  	echo am33xx_pwm > /sys/devices/platform/bone_capemgr/slots
 
 	echo BB-PWM1 > /sys/devices/platform/bone_capemgr/slots
 
- * 查看，改变IO口属性？
+### 查看，改变IO口属性？
  
 	cd /sys/devices/platform/ocp
 
@@ -69,7 +69,7 @@ root@beaglebone:/sys/devices/platform/ocp/ocp:P9_14_pinmux
 
 ![pwm3img](/post_img/BBB-img/pwm3img.png  "pwm3img")
 
- * 可以使用，在文件夹路径
+### 可以使用，在文件夹路径
  
 	/sys/devices/platform/ocp/48302000.epwmss/48302200.pwm/pwm/pwmchip3/pwm0
 
