add simple way to eclipse env in BBB

--- a/_posts/2017-11-14-BBB-note3.md
+++ b/_posts/2017-11-14-BBB-note3.md
@@ -46,17 +46,13 @@ meta: "Springfield"
 ### 添加到 slots 里面去。
 
  	echo am33xx_pwm > /sys/devices/platform/bone_capemgr/slots
-
 	echo BB-PWM1 > /sys/devices/platform/bone_capemgr/slots
 
 ### 查看，改变IO口属性？
  
 	cd /sys/devices/platform/ocp
-
 	config-pin -l P9.14
-
 	config-pin P9.14 pwm
-
 	cat ocp:P9_14_pinmux/state　查看属性
 
 > 另外备注：在将cape-universaln插入槽中（slots）后，在
@@ -79,11 +75,21 @@ root@beaglebone:/sys/devices/platform/ocp/ocp:P9_14_pinmux
 
 	可以正常使用命令
 
-	 echo 0 > polarity 
-
-	 echo 20000000 > period 
-
+	 echo 500 > duty_cycle 
+	 echo 10000 > polarity 
 	 echo 1 > enable
 
+ > 操作PWM用到duty(duty_ns)、period(period_ns)、polarity、run共四个参数，其中period就是频率参数（周期时间），duty为占空比，polarity为使能标志（1为使能，0为禁用），run 是执行命令（1为运行，0为关闭），period和duty的参数单位为纳秒（ns），1s=1000ms=1000000us=1000000000ns，所以period最大的取值范围为0—1000000000，而duty则取值0—period值之间
 
+###### 部分参数改变了，意义一样。
+-------
+
+## 网络问题的解决
+有时发现无法连接，打开网络设置发现提示系统与网络兼容，因为启用过锐捷【万恶】，解决方法：
+
+	cd /etc/NetworkManager
+	sudo mv NetworkManager.conf /home/[name]/
+	sudo NetworkManager //重启
+
+完毕后你会发现网络恢复，正常使用，不要用锐捷了就。
 
