add bbb i2c mpu6050 v1.1

--- a/_posts/2017-11-29-BBB-note5-i2c1.md
+++ b/_posts/2017-11-29-BBB-note5-i2c1.md
@@ -40,7 +40,7 @@ meta: "Springfield"
 
 	i2cdetect -y -r 1
 
-![mpu-origindata](/post_img/BBB-img/mpu-origindata.png  "mpu-origindata")
+![iic-findID](/post_img/BBB-img/iic-findID.png  "iic-findID")
 
 ### 检测MPU6050 地址
 	i2cget -y 1 0x68 0x75
