--- a/_posts/2017-11-29-BBB-note5-i2c1.md
+++ b/_posts/2017-11-29-BBB-note5-i2c1.md
@@ -52,3 +52,17 @@ meta: "Springfield"
 
 ### 读取MPU6050 数据
 ![mpu-origindata](/post_img/BBB-img/mpu-origindata.png  "mpu-origindata")
+
+---------
+## Linux 硬件驱动编程
+
+使用i2c通信先配置地址，数据位，超时时间等等通信规则。
+这里的ioctl函数就是用来配置这些参数的。
+I2C_SLAVE：安全的配置，如果i2c已经配置过会返回失败。
+ I2C_SLAVE_FORCE：总是成功，不管其他人有没有在使用，确定只有你使用这个i2c的时候使用。
+同时ioctl还能使用I2C_TENBIT，I2C_PEC，I2C_TIMEOUT等参数。
+这里只是配置i2c通信规则，还没有发送数据。
+配置完成后，调用write,read函数可以接收发送数据。
+
+
+i2cget和i2cset，分别是对寄存器进行获取和写入。用法为i2cget -y 总线号 设备地址 寄存器地址 模式和i2cset -y 总线号 设备地址 寄存器地址 数值 模式。模式默认为b（byte）即读取8bit数据，i2cget可用模式有b/w/c，i2cset可用模式有b/w/c/i/s，其中w为word（16bit），i和s分别为I2C和SMBUS的block数据。
