add bbb-mpu Eular angle

--- a/_posts/2017-11-29-BBB-note5-i2c1.md
+++ b/_posts/2017-11-29-BBB-note5-i2c1.md
@@ -53,6 +53,20 @@ meta: "Springfield"
 ### 读取MPU6050 数据
 ![mpu-origindata](/post_img/BBB-img/mpu-origindata.png  "mpu-origindata")
 
+## C++重新获取mpu6050欧拉角
+[获取mpu6050欧拉角](https://github.com/Eacaen/my-BBB-lib/tree/master/i2c-mpu6050)
+## IIC类 读取地址
+
+## mpu6050类 读取寄存器值
+
+## 使用四元数进行姿态解析
+
+尚未加入诸如卡尔曼等类型的滤波函数。
+
+
+
+
+
 ---------
 ## Linux 硬件驱动编程
 
